--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <meta http-equiv="Refresh" content="0;url=./index.p`html">
+    <meta http-equiv="Refresh" content="0;url=./index.phtml">
 </head>
 <body>
     
